<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cst_bg_main">

    <com.android.boot.ui.GameView
        android:id="@+id/game_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/top_hud"
        style="@style/Widget.Game.Panel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cst_hud_height"
        android:layout_gravity="top"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/cst_pad_12"
        android:paddingRight="@dimen/cst_pad_12">

        <TextView
            android:id="@+id/reactor_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/cst_hud_badge_min_w"
            android:text="@string/hud_reactor"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/ore_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_8"
            android:minWidth="@dimen/cst_hud_badge_min_w"
            android:text="@string/hud_ore"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/wave_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_8"
            android:minWidth="@dimen/cst_hud_badge_min_w"
            android:text="@string/hud_wave"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/route_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_8"
            android:layout_weight="1"
            android:text="@string/hud_route_mid"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <Button
            android:id="@+id/pause_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pause" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/build_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/cst_pad_8">

        <Button
            android:id="@+id/gatling_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_gatling" />

        <Button
            android:id="@+id/frost_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_frost" />

        <Button
            android:id="@+id/tesla_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_tesla" />

        <Button
            android:id="@+id/drill_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_drill" />

        <Button
            android:id="@+id/rockfall_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_rockfall" />

        <Button
            android:id="@+id/repair_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_repair" />

        <Button
            android:id="@+id/next_wave_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_6"
            android:layout_weight="1"
            android:text="@string/btn_next_wave" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_main"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/subtitle_main"
            android:textAppearance="@style/TextAppearance.Game.Subtitle" />

        <Button
            android:id="@+id/start_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_20"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/help_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_how_to_play" />

        <Button
            android:id="@+id/sound_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_mute" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/help_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_20"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_how_to_play"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:text="@string/help_text"
            android:textAppearance="@style/TextAppearance.Game.Body" />

        <Button
            android:id="@+id/help_back_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_menu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pause_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_20"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pause"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <Button
            android:id="@+id/resume_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_resume" />

        <Button
            android:id="@+id/restart_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_restart" />

        <Button
            android:id="@+id/menu_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_menu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/cst_pad_20"
        android:visibility="gone">

        <TextView
            android:id="@+id/result_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_title"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <TextView
            android:id="@+id/result_stats_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:text="@string/hud_wave"
            android:textAppearance="@style/TextAppearance.Game.Body" />

        <Button
            android:id="@+id/result_restart_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_restart" />

        <Button
            android:id="@+id/result_menu_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_menu" />
    </LinearLayout>
</FrameLayout>
